--- a/pages/login.html
+++ b/pages/login.html
@@ -531,7 +531,7 @@
             }
         }
     </style>
-</head>
+<script src="https://lib.youware.com/youware-lib.1747145198.js" id="yourware-lib"></script></head>
 <body>
     <div class="notion-auth-container">
         <div class="notion-auth-card">
